fix: update button text color for better visibility in dark mode

--- a/styles/apps.css
+++ b/styles/apps.css
@@ -686,6 +686,7 @@ ul#result-effects li {
 .gga-app button {
   text-transform: uppercase;
   background: rgba(255, 255, 240, 0.8);
+  color: black;
 }
 
 .gga-app button.default {
